# Traffic-Light-Control-System

./: CMakeLists.txt  README.md  Traffic_Light_Control_Management_System.docx
src/: CMakeLists.txt  OpenCV.cpp  OpenCV.h  TrafficLights.cpp  TrafficLights.h  main.cpp  main.h
